ch7/tests/fails/empty_panic.stderr
error: please make sure every panic has a message
  --> tests/fails/empty_panic.rs:11:9
   |
11 |         panic!();
   |         ^^^^^
